restore java 8 compatibility
fix changes cherry picked from 9.x to be java 8 compatible